# content-filtering-lvl1

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  evaluate_threshold.py  requirements.txt  test_gemma.py  test_gemma_it.py  test_gemma_it_threshold_optim.py  test_gemma_parquet.py  test_modernbert_parquet.py  threshold_evaluation.py
.devcontainer/: Dockerfile  devcontainer.json
config/: fasttext_training_config.yaml  instruction_training_config.yaml  modernbert_training_config.yaml  training_config.yaml
data_analysis/: add_token_length_col_and_label_1.py  analyzer_parquet.py  word_frequency.py
data_analysis/data_processing_scripts/: create_train_and_test_3.py  filter_greater_than_8k_2.py
outputs/test_results/: in_dist_compelete_results.json  in_dist_sumary_report.csv
outputs/threshold_optimization/: threshold_optimization_20251102_213726.json  threshold_optimization_20251102_221607.json  threshold_optimization_20251102_225959.json  threshold_summary_20251102_213726.csv  threshold_summary_20251102_221607.csv  threshold_summary_20251102_225959.csv
scripts/: benchmark_gema_extensive.py  classify_parquet_logprobs.py  classify_parquet_response.py  evaluate_fasttext.py  push_model_to_hub.py  test_gemma_manual.py  train.py  train_fasttext.py  train_gemma.py  train_instruction_tuning.py  train_modernbert.py
src/inference/resources/: pyproject.toml
src/training/: fasttext_trainer.py  instruction_trainer.py  modernbert_trainer.py  trainer.py
utils/: distribution.py
weights/gemma3_binary_model_final_v3/: README.md  adapter_config.json  tokenizer.json  (+3 more)
(+4 files in other folders)
